--- a/.github/actions/upload_aws/action.yml
+++ b/.github/actions/upload_aws/action.yml
@@ -1,15 +1,19 @@
 name: Upload to AWS S3
 
-
 inputs:
   source:
     required: true
     type: string
 
   destination:
-    required: true
+    required: false
     type: string
 
+  AWS_ACCESS_KEY_ID:
+    required: true
+
+  AWS_SECRET_ACCESS_KEY:
+    required: true
 
 runs:
   using: composite
@@ -18,10 +22,11 @@ runs:
       if: >-
         (github.event_name == 'push' && github.ref == 'refs/heads/main' && github.repository_owner == 'adafruit') ||
         (github.event_name == 'release' && (github.event.action == 'published' || github.event.action == 'rerequested'))
-      run: |
-        pip install awscli
-        [ -z "$AWS_ACCESS_KEY_ID" ] || aws s3 cp bin/ s3://adafruit-circuit-python/bin/ --recursive --no-progress --region us-east-1
+      run: >-
+        [ -z "$AWS_ACCESS_KEY_ID" ] ||
+        aws s3 cp ${{ inputs.source }} s3://adafruit-circuit-python/bin/${{ inputs.destination }} --recursive --no-progress --region us-east-1
       env:
         AWS_PAGER: ''
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
+      shell: bash
