--- a/.github/actions/deps/external/action.yml
+++ b/.github/actions/deps/external/action.yml
@@ -12,8 +12,18 @@ inputs:
     - riscv
     - none
 
+  apt:
+    required: false
+    default: true
+    type: boolean
+
+  python:
+    required: false
+    default: true
+    type: boolean
+
 runs:
-  using: "composite"
+  using: composite
   steps:
     # aarch
     - name: Get aarch toolchain
@@ -74,8 +84,16 @@ runs:
       shell: bash
 
     # common
+    - name: Cache python dependencies
+      if: inputs.python == 'true' && inputs.platform != 'espressif'
+      uses: ./.github/actions/deps/python
+      with:
+        action: ${{ fromJSON('["restore", "cache"]')[github.job == 'scheduler'] }}
+    - name: Install python dependencies
+      if: inputs.python == 'true'
+      run: pip install -r requirements-dev.txt
+      shell: bash
     - name: Install dependencies
-      run: |
-        sudo apt-get install -y gettext
-        pip install -r requirements-dev.txt
+      if: inputs.apt == 'true'
+      run: sudo apt-get install -y gettext
       shell: bash
