--- a/.github/actions/deps/external/action.yml
+++ b/.github/actions/deps/external/action.yml
@@ -12,16 +12,6 @@ inputs:
     - riscv
     - none
 
-  apt:
-    required: false
-    default: true
-    type: boolean
-
-  python:
-    required: false
-    default: true
-    type: boolean
-
 runs:
   using: composite
   steps:
@@ -85,15 +75,10 @@ runs:
 
     # common
     - name: Cache python dependencies
-      if: inputs.python == 'true' && inputs.platform != 'espressif'
+      if: inputs.platform != 'espressif'
       uses: ./.github/actions/deps/python
       with:
         action: ${{ fromJSON('["restore", "cache"]')[github.job == 'scheduler'] }}
     - name: Install python dependencies
-      if: inputs.python == 'true'
       run: pip install -r requirements-dev.txt
-      shell: bash
-    - name: Install dependencies
-      if: inputs.apt == 'true'
-      run: sudo apt-get install -y gettext
       shell: bash
