--- a/.github/actions/deps/python/action.yml
+++ b/.github/actions/deps/python/action.yml
@@ -14,22 +14,29 @@ runs:
   using: composite
   steps:
     - name: Cache python dependencies
-      if: ${{ inputs.action == 'cache' }}
+      id: cache-python-deps
+      if: inputs.action == 'cache'
       uses: actions/cache@v3
       with:
         path: .cp_tools
         key: ${{ runner.os }}-${{ env.pythonLocation }}-tools-cp-${{ hashFiles('requirements-dev.txt') }}
 
     - name: Restore python dependencies
-      if: ${{ inputs.action == 'restore' }}
+      id: restore-python-deps
+      if: inputs.action == 'restore'
       uses: actions/cache/restore@v3
       with:
         path: .cp_tools
         key: ${{ runner.os }}-${{ env.pythonLocation }}-tools-cp-${{ hashFiles('requirements-dev.txt') }}
 
     - name: Set up venv
+      if: inputs.action == 'cache' && !steps.cache-python-deps.outputs.cache-hit
+      run: python -m venv .cp_tools
+      shell: bash
+
+    - name: Activate venv
+      if: inputs.action == 'cache' || (inputs.action == 'restore' && steps.restore-python-deps.outputs.cache-hit)
       run: |
-        python -m venv .cp_tools
         source .cp_tools/bin/activate
         echo >> $GITHUB_PATH "$PATH"
       shell: bash
