--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Set up external
       uses: ./.github/actions/deps/external
     - name: Install dependencies
-      run: sudo apt-get install -y uncrustify
+      run: sudo apt-get install -y gettext uncrustify
     - name: Run pre-commit
       uses: pre-commit/action@v3.0.0
     - name: Make patch
