--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
       build-boards: ${{ steps.set-matrix.outputs.build-boards }}
       boards-aarch: ${{ steps.set-matrix.outputs.boards-aarch }}
       boards-arm: ${{ steps.set-matrix.outputs.boards-arm }}
-      boards-espressif: ${{ steps.set-matrix.outputs.boards-espressif }}
+      boards-esp: ${{ steps.set-matrix.outputs.boards-esp }}
       boards-riscv: ${{ steps.set-matrix.outputs.boards-riscv }}
+      boards-rpi: ${{ steps.set-matrix.outputs.boards-rpi }}
       cp-version: ${{ steps.set-up-submodules.outputs.version }}
     steps:
     - name: Dump GitHub context
@@ -238,13 +239,13 @@ jobs:
       cp-version: ${{ needs.scheduler.outputs.cp-version }}
 
 
-  espressif:
+  esp:
     needs: [scheduler, mpy-cross, tests]
-    if: ${{ needs.scheduler.outputs.boards-espressif != '[]' }}
+    if: ${{ needs.scheduler.outputs.boards-esp != '[]' }}
     uses: ./.github/workflows/build-boards.yml
     with:
-      platform: espressif
-      boards: ${{ needs.scheduler.outputs.boards-espressif }}
+      platform: esp
+      boards: ${{ needs.scheduler.outputs.boards-esp }}
       cp-version: ${{ needs.scheduler.outputs.cp-version }}
 
 
@@ -255,4 +256,13 @@ jobs:
     with:
       platform: riscv
       boards: ${{ needs.scheduler.outputs.boards-riscv }}
+      cp-version: ${{ needs.scheduler.outputs.cp-version }}
+
+  rpi:
+    needs: [scheduler, mpy-cross, tests]
+    if: ${{ needs.scheduler.outputs.boards-rpi != '[]' }}
+    uses: ./.github/workflows/build-boards.yml
+    with:
+      platform: arm
+      boards: ${{ needs.scheduler.outputs.boards-rpi }}
       cp-version: ${{ needs.scheduler.outputs.cp-version }}
