--- a/.github/actions/deps/ports/espressif/action.yml
+++ b/.github/actions/deps/ports/espressif/action.yml
@@ -1,27 +1,15 @@
-name: Fetch port deps
-
-inputs:
-  platform:
-    required: false
-    default: none
-    type: choice
-    options:
-    - espressif
-    - none
+name: Fetch espressif port deps
 
 runs:
   using: composite
   steps:
-    # espressif
     - name: Set IDF env
-      if: inputs.platform == 'espressif'
       run: |
         echo >> $GITHUB_ENV "IDF_PATH=$GITHUB_WORKSPACE/ports/espressif/esp-idf"
         echo >> $GITHUB_ENV "IDF_TOOLS_PATH=$GITHUB_WORKSPACE/.idf_tools"
       shell: bash
 
     - name: Get IDF commit
-      if: inputs.platform == 'espressif'
       id: idf-commit
       run: |
         COMMIT=$(git submodule status ports/espressif/esp-idf | grep -o -P '(?<=^-).*(?= )')
@@ -30,7 +18,6 @@ runs:
       shell: bash
 
     - name: Cache IDF submodules
-      if: inputs.platform == 'espressif'
       uses: actions/cache@v3
       with:
         path: |
@@ -39,13 +26,11 @@ runs:
         key: submodules-idf-${{ steps.idf-commit.outputs.commit }}
 
     - name: Cache IDF tools
-      if: inputs.platform == 'espressif'
       uses: actions/cache@v3
       with:
         path: ${{ env.IDF_TOOLS_PATH }}
         key: ${{ runner.os }}-${{ env.pythonLocation }}-tools-idf-${{ steps.idf-commit.outputs.commit }}
 
     - name: Initialize IDF submodules
-      if: inputs.platform == 'espressif'
       run: git submodule update --init --depth=1 --recursive $IDF_PATH
       shell: bash
