Reintroduce Python rendering per review feedback

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,6 +16,7 @@ body:
         Include the version of CircuitPython you're running. You can see it in
         the `boot_out.txt` file, as well as in the `REPL`.
       placeholder: Adafruit CircuitPython 6.2.0 on 2021-03-01; Raspberry Pi Pico with rp2040
+      render: python
     validations:
       required: true
   - type: textarea
@@ -35,7 +36,7 @@ body:
       label: Behavior
       description: What happens when you run the code above? Include error messages (if any).
       placeholder: |
-        ```
+        ```python
         Traceback (most recent call last):
           File "<stdin>", line 1, in <module>
           TimeoutError: Clock stretch too long
