--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,10 @@ jobs:
       uses: ./.github/actions/deps/external
       with:
         action: cache
+    - name: Set up mpy-cross
+      uses: ./.github/actions/mpy_cross
+      with:
+        download: false
     - name: Get last commit with checks
       id: get-last-commit-with-checks
       if: github.event_name == 'pull_request'
@@ -63,14 +67,10 @@ jobs:
         REPO: ${{ github.repository }}
         PULL: ${{ github.event.number }}
         GITHUB_TOKEN: ${{ github.token }}
-        EXCLUDE_COMMIT: ${{ github.event.after }}
-    - name: Set up mpy-cross
-      uses: ./.github/actions/mpy_cross
-      with:
-        download: false
+        EXCLUDE_COMMIT: ${{ github.event.pull_request.head.sha }}
     - name: Set head sha
       if: github.event_name == 'pull_request'
-      run: echo "HEAD_SHA=$(git show -s --format=%s $GITHUB_SHA | grep -o -P "(?<=Merge ).*(?= into)")" >> $GITHUB_ENV
+      run: echo "HEAD_SHA=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
     - name: Set base sha
       if: github.event_name == 'pull_request'
       run: |
