stm32/Makefile: Pass relevant CPU flags to assembler.
Needed for compiling gchelper_thumb2 on cortex-m33.

Signed-off-by: Damien George <damien@micropython.org>

--- a/ports/stm32/Makefile
+++ b/ports/stm32/Makefile
@@ -110,6 +110,8 @@ CFLAGS += -DSTM32_HAL_H='<stm32$(MCU_SERIES)xx_hal.h>'
 CFLAGS += -DMBOOT_VTOR=$(MBOOT_TEXT0_ADDR)
 CFLAGS += -DMICROPY_HW_VTOR=$(TEXT0_ADDR)
 
+AFLAGS += $(filter -mcpu=%,$(CFLAGS_MCU_$(MCU_SERIES)))
+
 # Configure for nan-boxing object model if requested
 ifeq ($(NANBOX),1)
 CFLAGS += -DMP_CONFIGFILE='"mpconfigport_nanbox.h"'
