--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   scheduler:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     outputs:
       docs: ${{ steps.set-matrix.outputs.docs }}
       boards: ${{ steps.set-matrix.outputs.boards }}
@@ -287,6 +287,7 @@ jobs:
     uses: ./.github/workflows/re-build-boards.yml
     secrets: inherit
     strategy:
+      fail-fast: false
       matrix:
         port: ${{ fromJSON(needs.scheduler.outputs.boards).ports }}
     with:
